--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "zombitron"]
 	path = zombitron
-	url = git@github.com:zombitron/zombitron.git
+	url = https://github.com/zombitron/zombitron-example.git
