--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "set-https": "node zombitron/setup/set-https",
+    "get-ip": "node zombitron/setup/get-ip",
+    "makecerts": "node zombitron/setup/makecerts",
+    "set-osc": "node zombitron/setup/set-osc"
   },
   "author": "Clara Rigaud",
   "license": "GNU",
